--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "leerob.io",
+  "name": "nguyenvukhang.com",
   "description": "My personal website.",
   "version": "0.0.0",
   "author": {
-    "name": "Lee Robinson",
-    "email": "me@leerob.io",
-    "url": "https://leerob.io"
+    "name": "Nguyen Vu Khang",
+    "email": "brew4k@gmail.com",
+    "url": "https://nguyenvukhang.com"
   },
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/leerob/leerob.io.git"
+    "url": "git+https://github.com/nguyenvukhang/blog.git"
   },
   "scripts": {
     "build": "next build",
