--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "arrowParens": "always",
     "singleQuote": true,
     "tabWidth": 2,
+    "semi": false,
     "trailingComma": "none"
   }
 }
