--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "My personal website.",
   "version": "0.0.0",
   "author": {
-    "name": "Nguyen Vu Khang",
+    "name": "Khang",
     "email": "brew4k@gmail.com",
     "url": "https://nguyenvukhang.com"
   },
@@ -25,17 +25,12 @@
     "@next/mdx": "11.0.1",
     "@tailwindcss/typography": "^0.4.1",
     "autoprefixer": "^10.2.6",
-    "big.js": "6.1.1",
     "date-fns": "2.22.1",
-    "fathom-client": "3.0.0",
-    "googleapis": "48.0.0",
     "gray-matter": "4.0.3",
     "mdx-prism": "0.3.3",
-    "micro-cookie-session": "^2.0.0-beta.1",
     "next": "^11.0.1",
     "next-mdx-remote": "^3.0.2",
     "next-themes": "^0.0.15",
-    "planetscale-node": "^0.1.0",
     "postcss": "^8.3.5",
     "preact": "^10.5.14",
     "react": "17.0.2",
@@ -45,8 +40,7 @@
     "remark-code-titles": "0.1.2",
     "remark-slug": "6.0.0",
     "swr": "0.5.6",
-    "tailwindcss": "^2.2.4",
-    "unsplash-js": "6.3.0"
+    "tailwindcss": "^2.2.4"
   },
   "devDependencies": {
     "eslint": "^7.29.0",
