--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@mdx-js/loader": "1.6.22",
     "@mdx-js/react": "1.6.22",
     "@next/mdx": "11.0.1",
+    "@tailwindcss/line-clamp": "^0.3.0",
     "@tailwindcss/typography": "^0.4.1",
     "autoprefixer": "^10.2.6",
     "date-fns": "2.22.1",
@@ -35,6 +36,7 @@
     "preact": "^10.5.14",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
     "reading-time": "1.3.0",
     "remark-autolink-headings": "6.0.1",
     "remark-code-titles": "0.1.2",
