--- a/package.json
+++ b/package.json
@@ -29,13 +29,13 @@
     "date-fns": "2.22.1",
     "gray-matter": "4.0.3",
     "mdx-prism": "0.3.3",
-    "next": "^11.0.1",
+    "next": "^12.1.0",
     "next-mdx-remote": "^3.0.2",
     "next-themes": "^0.0.15",
     "postcss": "^8.4.6",
     "preact": "^10.5.14",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "reading-time": "1.3.0",
     "remark-autolink-headings": "6.0.1",
