--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "tailwindcss": "^3.0.23"
   },
   "devDependencies": {
+    "@types/react": "^17.0.39",
     "eslint": "^7.29.0",
     "eslint-config-next": "11.0.1",
     "globby": "11.0.4",
@@ -55,6 +56,7 @@
     "remark-parse": "9.0.0",
     "remark-stringify": "9.0.1",
     "rss": "1.2.2",
+    "typescript": "^4.5.5",
     "unified": "9.2.1",
     "unist-util-visit": "2.0.3"
   },
