--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,6 @@
 {
   "cleanUrls": true,
   "trailingSlash": false,
-  "headers": [
-    {
-      "source": "/fonts/inter-var-latin.woff2",
-      "headers": [
-        {
-          "key": "Cache-Control",
-          "value": "public, max-age=31536000, immutable"
-        }
-      ]
-    }
-  ],
   "redirects": [
     {
       "source": "/projects",
@@ -21,5 +10,8 @@
       "source": "/github",
       "destination": "https://github.com/nguyenvukhang"
     }
-  ]
+  ],
+  "github": {
+    "silent": true
+  }
 }
