--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "preact": "^10.5.14",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-icons": "^4.3.1",
     "reading-time": "1.5.0",
     "remark-autolink-headings": "6.0.1",
     "remark-code-titles": "0.1.2",
@@ -46,16 +45,13 @@
     "@types/react": "^17.0.39",
     "eslint": "^7.29.0",
     "eslint-config-next": "11.0.1",
-    "globby": "11.0.4",
-    "image-size": "1.0.0",
     "prettier": "2.3.2",
     "rehype": "11.0.0",
     "remark-frontmatter": "3.0.0",
     "remark-parse": "9.0.0",
     "remark-stringify": "9.0.1",
     "typescript": "^4.5.5",
-    "unified": "9.2.1",
-    "unist-util-visit": "2.0.3"
+    "unified": "9.2.1"
   },
   "prettier": {
     "arrowParens": "always",
