--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@tailwindcss/typography": "^0.5.2",
     "autoprefixer": "^10.4.2",
     "date-fns": "2.22.1",
+    "firebase": "^9.6.9",
     "gray-matter": "4.0.3",
     "next": "^11.1.4",
     "next-mdx-remote": "^3.0.2",
