--- a/package.json
+++ b/package.json
@@ -19,39 +19,40 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@mdx-js/loader": "1.6.22",
-    "@mdx-js/react": "1.6.22",
-    "@next/mdx": "11.0.1",
-    "@tailwindcss/line-clamp": "^0.3.0",
-    "@tailwindcss/typography": "^0.5.2",
-    "autoprefixer": "^10.4.2",
-    "date-fns": "2.22.1",
+    "@mdx-js/loader": "2.1.3",
+    "@mdx-js/react": "2.1.3",
+    "@next/mdx": "12.2.5",
+    "@tailwindcss/line-clamp": "^0.4.0",
+    "@tailwindcss/typography": "^0.5.4",
+    "autoprefixer": "^10.4.8",
+    "date-fns": "2.29.2",
     "gray-matter": "4.0.3",
-    "next": "^11.1.4",
-    "next-mdx-remote": "^3.0.2",
-    "next-themes": "^0.0.15",
-    "postcss": "^8.4.6",
-    "preact": "^10.5.14",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "next": "^12.2.5",
+    "next-mdx-remote": "^4.1.0",
+    "next-themes": "^0.2.0",
+    "postcss": "^8.4.16",
+    "preact": "^10.10.6",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "reading-time": "1.5.0",
-    "remark-autolink-headings": "6.0.1",
+    "remark-autolink-headings": "7.0.1",
     "remark-code-titles": "0.1.2",
-    "remark-slug": "6.0.0",
-    "swr": "0.5.6",
-    "tailwindcss": "^3.0.23"
+    "remark-slug": "7.0.1",
+    "swr": "1.3.0",
+    "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
-    "@types/react": "^17.0.39",
-    "eslint": "^7.29.0",
-    "eslint-config-next": "11.0.1",
-    "prettier": "2.3.2",
-    "rehype": "11.0.0",
-    "remark-frontmatter": "3.0.0",
-    "remark-parse": "9.0.0",
-    "remark-stringify": "9.0.1",
-    "typescript": "^4.5.5",
-    "unified": "9.2.1"
+    "@types/node": "^18.7.12",
+    "@types/react": "^18.0.17",
+    "eslint": "^8.22.0",
+    "eslint-config-next": "12.2.5",
+    "prettier": "2.7.1",
+    "rehype": "12.0.1",
+    "remark-frontmatter": "4.0.1",
+    "remark-parse": "10.0.1",
+    "remark-stringify": "10.0.2",
+    "typescript": "^4.7.4",
+    "unified": "10.1.2"
   },
   "prettier": {
     "arrowParens": "always",
