--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@mdx-js/loader": "2.1.3",
     "@mdx-js/react": "2.1.3",
     "@next/mdx": "12.2.5",
+    "@primer/octicons-react": "^17.4.1",
     "@tailwindcss/line-clamp": "^0.4.0",
     "@tailwindcss/typography": "^0.5.4",
     "autoprefixer": "^10.4.8",
